# petlab

./: .gitignore  README.md  build.sh  drawdown_test.py  egg_ccs_cobyla_con.txt  egg_ccs_cobyla_con_2.txt  egg_ccs_cobyla_con_3.txt  egg_ccs_cobyla_con_4.txt  egg_ccs_cobyla_con_5.txt  egg_ccs_cobyla_con_6.txt  egg_ccs_cobyla_unc.txt  egg_ccs_cobyla_unc_2.txt  egg_ccs_cobyla_unc_3.txt  egg_ccs_cobyla_unc_4.txt  egg_ccs_cobyla_unc_5.txt  egg_ccs_cobyla_unc_6.txt  egg_ccs_nomad_con.txt  egg_ccs_nomad_con_2.txt  egg_ccs_nomad_con_3.txt  egg_ccs_nomad_con_4.txt  egg_ccs_nomad_con_5.txt  egg_ccs_nomad_con_6.txt  egg_ccs_nomad_con_7.txt  egg_ccs_nomad_unc.txt  egg_ccs_nomad_unc_2.txt  egg_ccs_nomad_unc_3.txt  egg_ccs_nomad_unc_4.txt  egg_ccs_nomad_unc_5.txt  egg_ccs_nomad_unc_6.txt  egg_constrained.sh  egg_constrained_cobyla.sh  egg_unconstrained_cobyla.sh  flash_calculation.py  hm_script.sh  npv_calculation.py  pyproject.toml  requirements.txt  run_spe10.ipynb  test.py  test_script.sh
data/Egg/: Egg.json  Egg_4Controls.json  Egg_4Controls_cobyla.json  Egg_4Controls_const.json  Egg_4Controls_const_cobyla.json  Egg_CLRM.json  Egg_CLRM_Prior.json  (+5 more)
docs/: CLRM.md
json_files/: dd_dataset_1.json  pvt_dataset_1.json
misc/: test_arbitrary_distribution.py  test_mcmc.py
random/: common.py  drawdown_test.py  pressure_drop_calculation.py
src/: analyze_ensemble.py  apply_control.py  create_ensemble.py  deck_parser.py  evaluate_ensemble.py  extract_ensemble.py  hm_ensemble.py  instruction.md  optimize_ensemble.py  relative_permeability.py  run_ensemble.py
tests/: test_run.py
(+356 files in other folders)
